fix: control visibility

--- a/app/themes/hunger-tv/assets/styles/components/carousel.scss
+++ b/app/themes/hunger-tv/assets/styles/components/carousel.scss
@@ -13,13 +13,21 @@
 	background: none;
 	border: none;
 	padding: 0;
-	@include link(white);
+	filter: drop-shadow(0 0 1em $black);
+	@include link($white);
+
+	svg {
+		width: 40px;
+		height: 40px;
+	}
 }
 
 .carousel__counter {
+	color: $white;
 	position: absolute;
 	bottom: rhythm(8);
 	left: rhythm(8);
+	text-shadow: 0 0 1em $black;
 }
 
 // Variants
